@@ -1,4 +1,5 @@
 Version 4.14
+* BUGFIX: Fixed a bug where chain index existence was not verified during signature parsing.
 
 2019-04-18 4.14.193
 
